<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultado"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/labelSoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/soma"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVariavelX"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/labelVariavelX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/variavel_x"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/textViewVariavelX"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginEnd="36dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelVariavelX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelVariavelX"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/x" />

    <Button
        android:id="@+id/buttonSetVariavelX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DAA917"
        android:text="@string/set_variavel_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/labelVariavelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/variavel_y"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVariavelX"
        app:layout_constraintVertical_bias="0.242" />

    <Button
        android:id="@+id/buttonSetVariavelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DAA917"
        android:text="@string/set_variavel_y"
        app:layout_constraintBottom_toTopOf="@+id/textViewResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.801" />

    <TextView
        android:id="@+id/textViewVariavelY"
        android:layout_width="189dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelVariavelY"
        app:layout_constraintStart_toEndOf="@+id/labelVariavelY"
        app:layout_constraintTop_toTopOf="@+id/labelVariavelY"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/y" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVariavelX"
        app:layout_constraintVertical_bias="0.622"
        tools:text="@string/resultado" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="76dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/th" />

</androidx.constraintlayout.widget.ConstraintLayout>